# boolia

./: .gitignore  README.md  pyproject.toml
boolia/: __init__.py  api.py  ast.py  errors.py  functions.py  lexer.py  parser.py  resolver.py  serialization.py
examples/: basic.py  rules.py
tests/: test_basic.py  test_functions.py  test_missing.py
